blog button on main page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                             <span>Home</span>
                         </a>
 
+                        <a class="navbar-item" href="/blog/">
+                            <span class="icon">
+                                <i class="fas fa-comments"></i>
+                            </span>
+                            <span>Blog</span>
+                        </a>
+
                         <div class="navbar-item has-dropdown is-hoverable">
                             <a class="navbar-link">
                                 <span class="icon">
